--- a/config/locales/controllers.fr.yml
+++ b/config/locales/controllers.fr.yml
@@ -9,7 +9,15 @@ fr:
       title: Créer une partie
     create:
       success: La partie a été crée.
+    dashboard:
+      title: Tableau de bord
+    edit:
+      title: Éditer la partie
+    destroy:
+      title: Supprimer la partie
   cards:
+    index:
+      title: Générer les cartes à imprimer
     show:
       todo: Remplir ma mission
       done: Mission effectuée!
