--- a/config/locales/models.fr.yml
+++ b/config/locales/models.fr.yml
@@ -17,3 +17,7 @@ fr:
         players: Joueurs
         actions: Actions
         updated_at: Dernière mise à jour
+      card:
+        player: Joueur
+        action: Action
+        target: Cible
