--- a/config/locales/models.fr.yml
+++ b/config/locales/models.fr.yml
@@ -16,6 +16,7 @@ fr:
         name: Titre
         players: Joueurs
         actions: Actions
+        target_action_preferences: Préférences de actions par joueurs
         updated_at: Dernière mise à jour
       card:
         player: Joueur
