--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -102,6 +102,20 @@ fr:
     one_player: Un joueur
     we_make_he_did: On l'a fait
 
+  card_print:
+    card_of: Killer card de <strong>%{name}</strong>
+    your_mission: 🎯 Ta mission
+    need_to_make: >
+      Fais en sorte que <strong>%{target}</strong> effectue l'action suivante:
+    help: Fais réaliser cette action à ta victime et remporte sa carte. Ensuite, remplis ton nouvel objectif!
+    qr_code: Lien de ta carte
+
+  card_view:
+    mark_as_done: ✅ Marquer comme fait
+    mark_as_todo: 😕 Oups... Je n'ai pas encore réussi la mission
+    well_done: Bien joué! Tu as effectué ta mission!
+    after_done_instructions: Prend la carte de <strong>%{target}</strong> et essaie de réaliser sa mission pour engranger plus de points.
+
   game:
     kill_words:
       - s'est fait démonter
