--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,6 +1,5 @@
 fr:
   application_name: Killer Game
-  hello: "test"
   my: Ma
   where_the_game_is_at: Où en est le jeu?
   refresh_this_page: Rafraîchir cette page
@@ -24,34 +23,42 @@ fr:
     other: Victimes
   game_over: Le jeu est terminé.
 
-  faq_title: Foire aux Questions
-
   faq:
-    what_are_the_rules:
-      summary: 🤔 C'est quoi les règles?
-      description:
-        - Les règles du jeu sont simple.
-        - Chaque participant doit remplir une mission. Celle-ci consistera simplement à mettre en défaut un autre candidat qui sera <i>“killed”</i>. A la différence près que chaque prédateur est également <strong>la cible d'un autre</strong>...
-        - <strong>Exemple:</strong><br/>Admettons qu'il y ait trois joueurs <strong>Alice, Bob et Marc</strong>. <strong>Alice</strong> devra “killer” <strong>Bob</strong> en accomplissant la mission qui lui est confiée par le maitre du jeu. Mais <strong>Alice</strong> sera également la "proie" de <strong>Marc</strong>, qui lui-même devra faire déjouer la mission de <strong>Bob</strong>. Si <strong>Alice</strong> “kill” <strong>Bob</strong>, elle commuique sa mission à Bob après lui avoir chuchoté à l'oreille "Tu es mort" et lui demande sa carte.
-    i_dont_know_target:
-      summary: 😪 Je ne connais pas la personne
-      description:
-        - Démerdes toi, c'est le jeu! 👹
-        - Si tu n'y arrive toujours pas, demande à l'organisateur. Mais fais attention, tu risques de laisser des indices sur ton objectif.
-    he_guess_my_card:
-      summary: 🤬 On a deviné ma carte
-      description:
-        - T'es niqué et tu ne pourras probablement jamais réaliser ta mission... Désolé.
-    he_is_not_there:
-      summary: 👻 La personne n'est pas là
-      description:
-        - Attends un peu pour être sûr.
-        - Si elle n'est toujours pas là, l'organisateur te donnera ça carte.
-    i_m_dead:
-      summary: 💀 Je suis mort
-      description:
-        - Evite de le dire à tout le monde pour continuer à laisser planer le doute.
-        - Tu peux aussi aider d'autres personnes à réaliser leur objectifs.
+    title: Foire aux Questions
+    description: Tu te pose une question sur le déroulement de la partie? Tu trouvera sûrement la réponse ici. Sinon, n'hésite pas a demander à l'organisateur de la partie.
+    items:
+      what_are_the_rules:
+        summary: 🤔 C'est quoi les règles?
+        description:
+          - Les règles du jeu sont simple.
+          - Chaque participant doit remplir une mission. Celle-ci consistera simplement à mettre en défaut un autre candidat qui sera <i>“killed”</i>. A la différence près que chaque prédateur est également <strong>la cible d'un autre</strong>...
+          - <strong>Exemple:</strong><br/>Admettons qu'il y ait trois joueurs <strong>Alice, Bob et Marc</strong>. <strong>Alice</strong> devra “killer” <strong>Bob</strong> en accomplissant la mission qui lui est confiée par le maitre du jeu. Mais <strong>Alice</strong> sera également la "proie" de <strong>Marc</strong>, qui lui-même devra faire déjouer la mission de <strong>Bob</strong>. Si <strong>Alice</strong> “kill” <strong>Bob</strong>, elle commuique sa mission à Bob après lui avoir chuchoté à l'oreille "Tu es mort" et lui demande sa carte.
+      i_dont_know_target:
+        summary: 😪 Je ne connais pas la personne
+        description:
+          - Démerdes toi, c'est le jeu! 👹
+          - Essaie de glaner des informations, parles avec les gens et observe.
+          - Si tu n'y arrive toujours pas, demande à l'organisateur. Mais fais attention, tu risques de laisser des indices sur ton objectif...
+      he_guess_my_card:
+        summary: 🤬 On a deviné ma carte
+        description:
+          - T'es niqué et tu ne pourras probablement jamais réaliser ta mission... Désolé.
+          - Essai de t'y prendre autrement et de te faire aider pour réaliser ton objectif.
+      he_is_not_there:
+        summary: 👻 La personne n'est pas là
+        description:
+          - Attends un peu pour être sûr.
+          - Si elle n'est toujours pas là, l'organisateur te donnera ça carte.
+      i_m_dead:
+        summary: 💀 Je suis mort
+        description:
+          - Evite de le dire à tout le monde pour continuer à laisser planer le doute.
+          - Maintenant, ton objectif est d'aider d'autres personnes à réaliser leur missions.
+      thats_impossible:
+        summary: 😱 Ma mission est trop dure
+        description:
+          - Pas de panique, tu peux prendre ton temps pour la réaliser.
+          - Tu peux aussi élaborer des plans et t'y prendre à plusieurs pour réaliser ton objectif.
 
   everything_is_calm: Tout est calme... pour le moment. 😏
 
