add default actions

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -157,6 +157,7 @@ fr:
         - Marc, Un mec qui fume beaucoup
       actions:
         - boire un shooter 🥃
+        - boire un cul-sec 🥃
         - danser sur une table 💃
         - dire une phrase en anglais (ou autre langue étrangère) 🇬🇧
         - dire une phrase en italien 🇮🇹
@@ -180,3 +181,10 @@ fr:
         - lui parler de ta passion des chèvres et obtenir 3 relance de sa part 🐐
         - poser 3 répliques d'OSS 117 sans que la personne s'en rende compte 🎥
         - poser 3 répliques de la Cité de la Peur sans que la personne s'en rende compte 🎥
+        - faire nettoyer quelque chose
+        - faire se fouiller les cheveux à la recherche d'un insecte
+        - faire dire le prénom de ses parents 🧓
+        - faire imiter un autre joueur 🦜
+        - faire porter son verre pendant qu'on parle 🤵
+        - faire complimenter sur soi-même 😳
+        - faire préparer un cocktail 🤵
