add default actions

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -161,30 +161,39 @@ fr:
         - danser sur une table 💃
         - dire une phrase en anglais (ou autre langue étrangère) 🇬🇧
         - dire une phrase en italien 🇮🇹
-        - faire un moonwalk 🕺
-        - faire chorégraphier la danse de Rabbi Jacob 🎩
+        - danser un moonwalk 🕺
+        - danser chorégraphier la danse de Rabbi Jacob 🎩
         - faire au moins trois jongles avec un balloon (ou tout autre objets) ⚽
         - faire une "ola" 🙌
         - exécuter les pas d'un madison ou d'un Kuduro 🕺
         - trinquer avec une personne qui lui est parfaitement inconnue 👬
         - faire un selfie avec toi 🤳
         - faire finir au moins 5 de tes phrases 🦜
-        - faire s'asseoir sur de l'eau 💧
         - faire 3 fois le tour de la même table en moins de 5min ⏱
         - prêter son téléphone 📱
-        - faire servir un truc à manger ou à boire 🥨
-        - faire raconter une blague 🤡
+        - servir un truc à manger ou à boire 🥨
+        - raconter une blague 🤡
         - découvrir quel est son livre préféré 📕
-        - faire chanter 🎙
-        - lui parler de ta passion pour les chaussettes et obtenir 3 relance de sa part 🧦
-        - lui parler de ta collection de tickets de métro et obtenir 3 relance de sa part 🛂
-        - lui parler de ta passion des chèvres et obtenir 3 relance de sa part 🐐
-        - poser 3 répliques d'OSS 117 sans que la personne s'en rende compte 🎥
-        - poser 3 répliques de la Cité de la Peur sans que la personne s'en rende compte 🎥
-        - faire nettoyer quelque chose
-        - faire se fouiller les cheveux à la recherche d'un insecte
-        - faire dire le prénom de ses parents 🧓
-        - faire imiter un autre joueur 🦜
-        - faire porter son verre pendant qu'on parle 🤵
-        - faire complimenter sur soi-même 😳
-        - faire préparer un cocktail 🤵
+        - chanter 🎙
+        - obtenir une question à propos de ta passion pour les chaussettes 🧦
+        - obtenir une question à propos de ta collection de tickets de métro 🛂
+        - obtenir une question à propos de ta passion les chèvres 🐐
+        - dire une réplique d'OSS 117 (comment est votre blanquette?) 🎥
+        - dire une réplique de la Cité de la Peur (Prenez un chewing-gum Emile) 🎥
+        - nettoyer quelque chose 🧽
+        - fouiller les cheveux à la recherche d'un insecte 🐜
+        - dire le prénom de ses parents 🧓
+        - imiter un autre joueur 🦜
+        - porter son verre pendant qu'on parle 🤵
+        - complimenter sur toi 😳
+        - préparer un cocktail 🤵
+        - ranger quelque chose dans la pièce 🧽
+        - faire bailler 😪
+        - faire écouter du Jul 👆
+        - décapsuler une bière 🍺
+        - trinquer avec toi 🍻
+        - lui servir sa boisson préférée 🥃
+        - le présenter à quelqu'un qu'il ne connaît pas 👋
+        - faire goûter une boisson qu'il n'aime pas 👬
+        - lâcher un pas de danse 🕺
+        - faire sonner ton téléphone 📱
