--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -120,7 +120,7 @@ fr:
     your_mission: 🎯 Ta mission
     need_to_make: >
       Fais en sorte que <strong>%{target}</strong> effectue l'action suivante:
-    help: Fais réaliser cette action à ta victime et remporte sa carte. Ensuite, remplis ton nouvel objectif!
+    help: Fais réaliser cette action à ta victime. Si tu y arrives, scanne le QR code pour marquer ta carte comme effectuée. Le QR code te donne aussi accès aux dashboard de la partie.
     qr_code: Lien de ta carte
 
   card_view:
