--- a/config/locales/cards/index.yml
+++ b/config/locales/cards/index.yml
@@ -2,3 +2,9 @@ fr:
   cards:
     index:
       title: Cartes
+      filtered_results: résultats filtrés
+en:
+  cards:
+    index:
+      title: Cards
+      filtered_results: filtered results
