--- a/config/locales/cards/print.yml
+++ b/config/locales/cards/print.yml
@@ -2,3 +2,8 @@ fr:
   cards:
     print:
       title: Générer les cartes à imprimer
+
+en:
+  cards:
+    print:
+      title: Generate cards to print
